tests/ui/fail_unmatched_close.stderr
error: invalid template literal
 --> tests/ui/fail_unmatched_close.rs:3:12
  |
3 |     value: "Hello }",
  |            ^^^^^^^^^
