tests/ui/fail_unmatched_close.rs
rusty18n::define_i18n_fallback! {
    FailUnmatchedClose => en
    value: "Hello }",
}

fn main() {}
